--- a/models/example/time_spine_semantic_model.yml
+++ b/models/example/time_spine_semantic_model.yml
@@ -3,12 +3,10 @@ semantic_models:
     model: ref('metricflow_time_spine')
     description: A time spine with one row per day.
 
+    primary_entity: date_day
+
     defaults:
       agg_time_dimension: date_day
-
-    entities:
-      - name: date_day
-        type: primary
 
     dimensions:
       - name: date_day
